<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/calendar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_title"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="122dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="162dp"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_history"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="427dp" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/appointment_date"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="460dp" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/appointment_description"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="510dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_appointment_button"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="594dp" />

</androidx.constraintlayout.widget.ConstraintLayout>