<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="408dp"
        android:layout_height="305dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="232dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txtname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txtspecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/species"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txtbreed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/breed"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imgpet"
                android:layout_width="wrap_content"
                android:layout_height="167dp"
                tools:srcCompat="@tools:sample/avatars" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/save_pet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pet_button"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="569dp" />

    <TextView
        android:id="@+id/add_pet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pet_title"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="152dp" />
</androidx.constraintlayout.widget.ConstraintLayout>