<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pet_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_profile_title"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="126dp" />

    <TableLayout
        android:layout_width="406dp"
        android:layout_height="194dp"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="331dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breed" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/appointment_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_history" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name" />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="160dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/add_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_appointment_button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="567dp" />
</androidx.constraintlayout.widget.ConstraintLayout>